# uhash-core

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benches/: uhash_bench.rs
demo/: .gitignore  README.md
demo/src-tauri/: Cargo.toml
demo/src-tauri/src/: lib.rs  main.rs
ios-test/: build.sh  rebuild.sh
ios-test/UHashTest/: ContentView.swift  UHashTest-Bridging-Header.h  UHashTestApp.swift
ios-test/UHashTest.xcodeproj/: project.pbxproj
ios-test/include/: uhash.h
src/: ffi.rs  lib.rs  primitives.rs  tests.rs  uhash.rs
web/: Cargo.toml
web/src/: lib.rs
